--- a/writeup/writeup.Rmd
+++ b/writeup/writeup.Rmd
@@ -754,7 +754,7 @@ We are 95% confident that the median availability for high volume hosts is betwe
 
 ### Conclusion For Part II
 
-Based on our second research question in our proposal, we wanted to see how the way in which a property is listed influences the availability of a listing. Assuming availibility is a good predictor of desirability (more availible, less desireable), we looked at how the variable “room type” affects the availability of the listing. We hypothesized that room type would be a major factor in predicting availability because our exploratory analysis showed that a shared room is likely the least desired due to the largest IQR and highest median availability of the three room types. Through our text analysis of the descriptions we found words associated with private were highly sought after. "Private" and "apartment" were highly common, indicating a private enclave, and "bedroom" indicating one's private space. In additon, our linear model predicting availability by all variables regarding listing, showed room type to be a relevant predictor. Furthermore, ...high volume & low volume....
+Based on our second research question in our proposal, we wanted to see how the way in which a property is listed influences the availability of a listing. Assuming availibility is a good predictor of desirability (more availible, less desireable), we looked at how the variable “room type” affects the availability of the listing. We hypothesized that room type would be a major factor in predicting availability because our exploratory analysis showed that a shared room is likely the least desired due to the largest IQR and highest median availability of the three room types. Through our text analysis of the descriptions we found words associated with private were highly sought after. "Private" and "apartment" were highly common, indicating a private enclave, and "bedroom" indicating one's private space. In additon, our linear model predicting availability by all variables regarding listing, showed room type to be a relevant predictor. Furthermore, we decided to conduct a hypothesis test to see if availability can be explained depending on whether a host is high volume or not, where high volume indicated that a host had more than one listing, and low volume indicated a host had only one histing. We had convincing evidence to conclude that there is a difference in median availability of high volume hosts and low volume hosts. Finally, we conducted a 95% confidence interval to find the different in median availability.
 
 ### Overall Conclusion 
 
